After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762246 - Don't use gtk_style_context_invalidate
Don't use gtk_style_context_invalidate
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-18 08:48 UTC by Carlos Soriano
Modified: 2016-02-29 14:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
pathbar: remove gtk_style_context_invalidate (4.67 KB, patch)
2016-02-19 09:45 UTC, Razvan Chitu
accepted-commit_now Details | Review

Description Carlos Soriano 2016-02-18 08:48:21 UTC
is deprecated!
Comment 1 Razvan Chitu 2016-02-19 09:45:01 UTC
Created attachment 321641 [details] [review]
pathbar: remove gtk_style_context_invalidate

In Nautilus, a size allocation of the pathbar could cause style context
invalidation for its children. Previously the invalidation had to be done
manually. Since it is now done automatically, checking if it is needed and
explicitly doing it are no longer necessary.

Remove function responsible for invalidating style contexts. Remove the logic
for checking if invalidation is needed.
Comment 2 Carlos Soriano 2016-02-26 07:52:30 UTC
Review of attachment 321641 [details] [review]:

LGTM thanks!!